[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "creditcard-identifier"
version = "1.0.0"
description = "Credit card BIN validation using bin-cc data"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Renato Viço"}
]
keywords = ["credit-card", "validation", "bin", "card-brand"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/renatovico/bin-cc"
Repository = "https://github.com/renatovico/bin-cc"
Documentation = "https://github.com/renatovico/bin-cc/tree/master/libs/python"

[tool.setuptools.packages.find]
where = ["."]
include = ["creditcard_identifier*"]
exclude = ["tests*"]
